# gemProc2caom2

./: Dockerfile  README.md  setup.cfg  setup.py
blank2caom2/: main_app.py
blank2caom2/tests/: test_main_app.py
gemProc2caom2/: __init__.py  builder.py  composable.py  fits2caom2_augmentation.py  main_app.py  preview_augmentation.py  provenance_augmentation.py  run_single.py
gemProc2caom2/tests/: config.yml  test_composable.py  test_main_app.py  test_preview_augmentation.py  test_provenance_augmentation.py  test_storage_name.py
gemProc2caom2/tests/data/: GN-2013A-Q-62-54-001.in.xml  GN-2013A-Q-62-59-002-RGN-FLAT.in.xml  GN-2013A-Q-62-59-013-RGN-RONCHI.in.xml  GN-2014A-Q-85-12-001.expected.xml  GN-2014A-Q-85-12-001.in.xml  GN-2014A-Q-85-12-002-CTFBRSN.expected.xml  GN-2014A-Q-85-12-002-CTFBRSN.in.xml  GN-2014A-Q-85-16-003-RGN-FLAT.expected.xml  GN-2014A-Q-85-16-003-RGN-FLAT.in.xml  GN-2014A-Q-85-16-013.xml  GN-2014A-Q-85-16-014-RGN-RONCHI.expected.xml  GN-2014A-Q-85-16-014-RGN-RONCHI.in.xml  GN-2015A-Q-6-12-001.in.xml  GN-2019A-Q-208-70-001.in.xml  GN-2019B-FT-101-31-001.expected.xml  GN-2019B-FT-101-31-001.in.xml  GN-2019B-FT-101-31-002-CTFBRSN.expected.xml  GN-2019B-FT-101-31-002-CTFBRSN.in.xml  GN-2019B-FT-101-34-001-RGN-FLAT.expected.xml  GN-2019B-FT-101-34-001-RGN-FLAT.in.xml  GN-2019B-FT-101-34-013-RGN-RONCHI.expected.xml  GN-2019B-FT-101-34-013-RGN-RONCHI.in.xml  config.yml  ctfbrsnN20140428S0086.expected.xml  ctfbrsnN20140428S0086.fits.header  ctfbrsnN20140428S0086.in.xml  (+35 more)
scripts/: config.yml  docker-entrypoint.sh  gem_proc_run.sh
(+2 files in other folders)
